--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <!-- #6 #external #action-->
+    <script src="js/emojis-list.js"></script>
     <script src="js/channels.js"></script>
     <script src="js/script.js"></script>
+
 
 
     <!-- #7 include Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
-<body onload="listChannels()">
+<body onload="listChannels('new')">
 
     <!-- channel area -->
     <div id="channels" class="shadow--16dp">
@@ -41,82 +43,48 @@
 
         </ul>
 
-        <div id="fab" class="accent shadow--6dp">
-            <p>+</p>
-        </div>
+        <button id="fab" class="accent shadow--6dp" onclick="fabClicked()">
+        +
+        </button>
 
         <!-- TAB BAR -->
         <div id="tab-bar" class="shadow--8dp">
             <!-- #6 #taptab buttons are getting ids with #hyphens and a #change listener calling selectTab.
              Pass the #argument to select Tab -->
-            <button class="selected" id="tab-new" onclick="selectTab('#tab-new')">
+            <button class="selected" id="tab-new" onclick="selectTab('#tab-new');listChannels('new')">
                 <i class="far fa-lightbulb"></i> New
             </button>
-            <button id="tab-trending" onclick="selectTab('#tab-trending')">
+            <button id="tab-trending" onclick="selectTab('#tab-trending');listChannels('trending')">
                 <i class="fas fa-fire"></i> Trending
             </button>
-            <button id="tab-favorites" onclick="selectTab('#tab-favorites')">
+            <button id="tab-favorites" onclick="selectTab('#tab-favorites');listChannels('favorites')">
                 <i class="fas fa-star"></i> Favorites
             </button>
         </div>
+
     </div>
 
     <div id="chat">
 
         <!-- APP BAR for CHANNEL TITLE -->
         <h1 class="shadow--8dp">
+          <div id="current-channel-bar">
             <!-- #6 #channels #switcher needs to identify the channel name, so let's give it an ID -->
             <span id="channel-name">#SevenContinents</span>
             <!-- #6 #channels #location also needs an id -->
-            <small id="channel-location">by <strong>cheeses.yard.applies</strong></small>
+            <small id="channel-location">by <a href="http://w3w.co/cheeses.yard.applies" target="_blank"><strong>cheeses.yard.applies</strong></a></small>
             <!-- #6 #liking channels requires a #filled star / with its #click listener -->
             <button class="primary" onclick="star()"><i id="channel-star" class="fas fa-star"></i></button>
+          </div>
+          <div id="add-channel-bar">
+            <input id="new-channel-name" type="text" placeholder="Enter a #ChannelName" maxlength="140">
+            <button class="primary" onclick="abortChannelCreation()"> <strong>x</strong> Abort </button>
+          </div>
         </h1>
+
 
         <!-- #5 #messages are now wrapped in a div to #scroll properly */ -->
         <div id="messages">
-
-            <div class="message own">
-                <h3><a href="http://w3w.co/cheeses.yard.applies" target="_blank"><strong>cheeses.yard.applies</strong></a>
-                    Wed, June 20th, 13:37 <em>15 min. left</em></h3>
-                <p>What's the place you folks call home?</p>
-                <button class="accent">+5 min.</button>
-            </div>
-
-            <div class="message">
-                <h3><a href="http://w3w.co/truck.cotton.zone" target="_blank"><strong>truck.cotton.zone</strong></a>
-                    Wed, June 20th, 13:39 <em>4 min. left</em></h3>
-                <p>BRISBANE! Hang loose!</p>
-                <button class="accent">+5 min.</button>
-            </div>
-
-            <div class="message">
-                <h3><a href="http://w3w.co/thus.best.dishes" target="_blank"><strong>thus.best.dishes</strong></a>
-                    Wed, June 20th, 14:02 <em>12 min. left</em></h3>
-                <p>The big apple.</p>
-                <button class="accent">+5 min.</button>
-            </div>
-
-            <div class="message">
-                <h3><a href="http://w3w.co/driveway.helper.magazine" target="_blank"><strong>driveway.helper.magazine</strong></a>
-                    Wed, June 20th, 14:02 <em>7 min. left</em></h3>
-                <p>Eu sou um Cariocas.</p>
-                <button class="accent">+5 min.</button>
-            </div>
-
-            <div class="message">
-                <h3><a href="http://w3w.co/escapes.pitch.saucepan" target="_blank"><strong>escapes.pitch.saucepan</strong></a>
-                    Wed, June 20th, 14:07 <em>14 min. left</em></h3>
-                <p>Greetings from the western cape!</p>
-                <button class="accent">+5 min.</button>
-            </div>
-
-            <div class="message">
-                <h3><a href="http://w3w.co/meanings.identity.pays" target="_blank"><strong>meanings.identity.pays</strong></a>
-                    Wed, June 20th, 04:08 <em>15 min. left</em></h3>
-                <p>北京</p>
-                <button class="accent">+5 min.</button>
-            </div>
 
         </div>
 
@@ -128,7 +96,8 @@
             <input id="message-input" type="text" placeholder="Message..." maxlength="140">
 
             <button id="send-message" class="accent" onclick="sendMessage()"><i class="fas fa-arrow-right"></i></button>
-            <div class="shadow--8dp" id="emojis">&#x1F601; &#x1F602; &#x1F603; &#x1F604; &#x1F605; &#x1F606; &#x1F607;</div>
+            <button id="create-channel-button" onclick="createNewChannel()" class="accent">Create</i></button>
+            <div class="shadow--8dp" id="emojis"></div>
         </div>
     </div>
 
